<resources>
    <string name="app_name">Project2</string>
    <string name="please_sign_in">Please Sign In</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="project_organizer">Project Organizer</string>
    <string name="welcome">Welcome!</string>
    <string name="create_project">Create Project</string>
    <string name="open_project">Open Project</string>
    <string name="shared_projects">Shared Projects</string>
    <string name="list_users">List Users</string>
    <string name="admin_feature">Admin Feature</string>
    <string name="logout">Logout</string>
    <string name="list_of_users">List of Users</string>
    <string name="previous_page">Previous Page</string>
    <string name="add_user">Add User</string>
    <string name="delete_user">Delete User</string>
    <string name="delete_a_user">Delete A User</string>
    <string name="add_a_user">Add A User</string>
    <string name="enter_a_username">Enter a username</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_user">Create User</string>
    <string name="admin_status_true_false">Admin Status(True/False)</string>
    <string name="enter_user_id">Enter User ID</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="enter_your_username">Enter Your Username</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="create_your_project">Create Your Project</string>
    <string name="enter_project_name">Enter Project Name</string>
    <string name="enter_shared_users">Enter Shared Users</string>
    <string name="enter_due_date">Enter Due Date</string>
    <string name="enter_user_ids">Enter Usernames</string>
    <string name="list_of_projects">List of Projects</string>
    <string name="enter_project_id">Enter Project Id</string>
    <string name="id">Id:</string>
    <string name="open_assignment">Open Assignment</string>
    <string name="create_assignment">Create Assignment</string>
    <string name="open_announcements">Open Announcements</string>
    <string name="create_announcement">Create Announcement</string>
    <string name="announcements">Announcements</string>
    <string name="enter_announcement_name">Enter Announcement Name</string>
    <string name="enter_message">Enter Message</string>
    <string name="enter_assignment_name">Enter Assignment Name</string>
    <string name="enter_assignment_details">Enter Assignment Details</string>
    <string name="assignments">Assignments</string>
    <string name="view_assignments">View Assignments</string>
    <string name="assignment_complete">Assignment Complete</string>
    <string name="project_id">Project Id:</string>
    <string name="user_id">User Id</string>

</resources>