<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LandingPage">

    <TextView
        android:id="@+id/Landing_Page_TextView"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="28dp"
        android:text="@string/welcome"
        android:textSize="32sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061"/>

    <Button
        android:id="@+id/Create_Project_Button"
        android:layout_width="277dp"
        android:layout_height="88dp"
        android:layout_marginTop="100dp"
        android:text="@string/create_project"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Landing_Page_TextView"
        />

    <Button
        android:id="@+id/Open_Project_Button"
        android:layout_width="277dp"
        android:layout_height="88dp"
        android:layout_marginTop="20dp"
        android:text="@string/open_project"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Create_Project_Button"
        />

    <Button
        android:id="@+id/Shared_Projects_Button"
        android:layout_width="277dp"
        android:layout_height="88dp"
        android:layout_marginTop="20dp"
        android:text="@string/shared_projects"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Open_Project_Button"
        />


    <Button
        android:id="@+id/Logout_Button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/logout"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>