<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".NotCreatorProjectPage">

    <TextView
        android:id="@+id/Not_Creator_Project_Page_TextView"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="28dp"
        android:text=""
        android:textSize="32sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061"/>

    <TextView
        android:id="@+id/Announcement_Notice_TextView"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text=""
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Not_Creator_Project_Page_TextView"/>


    <Button
        android:id="@+id/View_Assignment_Button"
        android:layout_width="277dp"
        android:layout_height="88dp"
        android:layout_marginTop="20dp"
        android:text="@string/view_assignments"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Announcement_Notice_TextView"
        />
    <Button
        android:id="@+id/Open_Announcement_Button"
        android:layout_width="277dp"
        android:layout_height="88dp"
        android:layout_marginTop="20dp"
        android:text="@string/open_announcements"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/View_Assignment_Button"/>

    <TextView
        android:id="@+id/Project_Id_TextView"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/project_id"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/Previous_Page_Button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/previous_page"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>